--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.10.3",
     "gatsby-plugin-mdx": "^3.10.2",
+    "gatsby-plugin-page-creator": "^4.10.2",
     "gatsby-source-filesystem": "^4.10.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
