--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^4.2.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.10.3",
@@ -22,7 +23,9 @@
     "gatsby-plugin-mdx": "^3.10.2",
     "gatsby-plugin-page-creator": "^4.10.2",
     "gatsby-plugin-sharp": "^4.10.2",
+    "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-source-filesystem": "^4.10.1",
+    "gatsby-transformer-remark": "^5.10.2",
     "gatsby-transformer-sharp": "^4.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
